# Instagram-Downloader-Bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  config.py  constants.py  i18n.py  json_logger.py  main.py  worker.py
bot/db/: models.py  repo.py  session.py
bot/handlers/: __init__.py  callbacks.py  commands.py  link.py
bot/keyboards/: common.py
bot/middlewares/: db_session.py  rate_limit.py
bot/services/: downloader.py  platforms.py  queue.py  safe_files.py
bot/states/: __init__.py  download.py
docker/: Dockerfile
scripts/: healthcheck.py  init_db.py
