[project]
name = "auto-social-media-downloader-bot"
version = "1.0.0"
description = "Production-grade Telegram downloader bot for Instagram media."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13.1,<4.0.0",
  "redis>=5.0.8,<6.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "yt-dlp>=2025.1.12",
  "python-json-logger>=2.0.7,<3.0.0",
  "orjson>=3.10.7,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0,<1.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC"]
ignore = ["E501"]
